--- a/docs/modules/ROOT/pages/contributing.adoc
+++ b/docs/modules/ROOT/pages/contributing.adoc
@@ -66,7 +66,7 @@ NOTE: The instructions here assume you already have (the right version of) node.
 
 Installing Antora is super simple — just clone the docs site repo and run:
 
-[source]
+[source,sh]
 ----
 $ cd docs.rubocop.org
 $ make install
@@ -79,7 +79,7 @@ if you run into any problems.
 
 You can build the documentation locally from the https://github.com/rubocop/docs.rubocop.org[docs.rubocop.org] repo.
 
-[source]
+[source,sh]
 ----
 $ cd docs.rubocop.org
 $ make build
@@ -98,7 +98,7 @@ The https://rubocop.org[rubocop.org] landing page is a separate project, built w
 
 To run the site locally you'll need Ruby (>= 3.2) and Node.js (>= 20):
 
-[source]
+[source,sh]
 ----
 $ cd rubocop.org
 $ bundle install && npm install
